tests/reliability/reject/mods/cyc_b.keel
import "cyc_a.keel"
def b_fn(); int:
    return 2
